# nvda-emacspeak-server

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindNvdaControllerClient.cmake
src/: main.c
